almost there. 9 compile errors remain